Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Portifolio | Felipe Kafka Dias</title>
 </head>
 
-<body class="text-white">
-  <div class="" id="root">
+<body class="bg-slate-950">
+  <div class="text-zinc-100/90" id="root">
   </div>
   <script type="module" src="/src/main.tsx"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
