--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Portifolio | Felipe Kafka Dias</title>
 </head>
 
-<body class="bg-slate-950">
-  <div class="text-zinc-100/90" id="root">
+<body class="bg-zinc-950">
+  <div class="text-zinc-100" id="root">
   </div>
   <script type="module" src="/src/main.tsx"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
