--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Portifolio | Felipe Kafka Dias</title>
 </head>
 
-<body class="bg-zinc-950">
+<body class="bg-gray-950">
   <div class="text-zinc-100" id="root">
   </div>
   <script type="module" src="/src/main.tsx"></script>
